--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
+    "go-get-folder-size": "^0.3.2",
     "vitepress": "1.0.0-beta.3",
     "vitepress-payload-extractor": "workspace:*"
   }
