--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "unbuild": "^1.2.1"
   },
   "dependencies": {
+    "html-minifier": "^4.0.0",
+    "@types/html-minifier": "^4.0.2",
     "ohash": "^1.1.2"
   }
 }
